# ld47

./: Cargo.toml
assets/texture/: wallsground_spritesheet.ron
config/: bindings.ron
src/: chunk.rs  main.rs  perlin.rs  pong.rs
src/systems/: bounce.rs  camera_movement.rs  mod.rs  move_balls.rs  paddle.rs  winner.rs
