[package]
name = "ld47"
version = "0.1.0"
authors = ["Rasmus Rosengren <rasmus.rosengren@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = {version = "0.15.3", features = ["no-slow-safety-checks"]}
log = { version = "0.4.8", features = ["serde"] }
noise = "0.6.0"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
